// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  /tmp/",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > cannot submit unknown value 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/_█
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│
│  Search: /tmp/_█
│  No matches found
│  Please select a path
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/b█
│  ● /tmp/bar
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  /tmp/bar",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > initialValue sets the value 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/bar█
│  ● /tmp/bar
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  /tmp/bar",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > renders cancelled value if one set 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/x█
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  Search: /tmp/xy█",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  /tmp/xy",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > renders message 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  /tmp/bar",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > renders submitted value 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/b█
│  ● /tmp/bar
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  Search: /tmp/ba█",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  /tmp/bar",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > validation errors render and clear (using Error) 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/r█
│  ● /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│
│  Search: /tmp/r█
│  should be /tmp/bar
│  ● /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│
│  Search: /tmp/█
│  ○ /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ● /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/b█
│  ● /tmp/bar
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  /tmp/bar",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > validation errors render and clear 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/r█
│  ● /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│
│  Search: /tmp/r█
│  should be /tmp/bar
│  ● /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│
│  Search: /tmp/█
│  ○ /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ● /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/b█
│  ● /tmp/bar
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  /tmp/bar",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  /tmp/",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > cannot submit unknown value 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/_█
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│
│  Search: /tmp/_█
│  No matches found
│  Please select a path
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/b█
│  ● /tmp/bar
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  /tmp/bar",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > initialValue sets the value 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/bar█
│  ● /tmp/bar
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  /tmp/bar",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > renders cancelled value if one set 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/x█
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  Search: /tmp/xy█",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  /tmp/xy",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > renders message 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  /tmp/bar",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > renders submitted value 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/b█
│  ● /tmp/bar
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  Search: /tmp/ba█",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  /tmp/bar",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > validation errors render and clear (using Error) 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/r█
│  ● /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│
│  Search: /tmp/r█
│  should be /tmp/bar
│  ● /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│
│  Search: /tmp/█
│  ○ /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ● /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/b█
│  ● /tmp/bar
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  /tmp/bar",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > validation errors render and clear 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: /tmp/█
│  ● /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ○ /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/r█
│  ● /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│
│  Search: /tmp/r█
│  should be /tmp/bar
│  ● /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│
│  Search: /tmp/█
│  ○ /tmp/bar
│  ○ /tmp/foo
│  ○ /tmp/hello
│  ● /tmp/root.zip
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: /tmp/b█
│  ● /tmp/bar
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  /tmp/bar",
  "
",
  "<cursor.show>",
]
`;
